--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   lottie: ^3.3.1
   firebase_messaging: ^15.2.5
   flutter_local_notifications: ^19.1.0
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
